--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,11 +10,11 @@ html(lang="en")
         header
             h1 Zoom
         main 
-            div#welcome
+            div#roomContainer
                 form
                     input(placeholder="room name", required, type="text")
                     button Enter Room
-            div#room
+            div#messageContainer
                 h3 
                 ul
                 form 
