--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -5,25 +5,16 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet" href="https://unpkg.com/mvp.css")
+        link(rel="stylesheet" href="/public/css/styles.css")
         title Zoom
     body 
         header
             h1 Zoom
         main 
-            div#roomContainer
-                form
-                    input(placeholder="room name", required, type="text")
-                    button Enter Room
-                h4 Open Rooms:
-                ul
-            div#messageContainer
-                h3 
-                ul
-                form#nickname
-                    input(placeholder="nickname", required, type="text")
-                    button Save
-                form#message
-                    input(placeholder="message", required, type="text")
-                    button Send
+            video#myFace(autoplay, playsinline, width="400", height="280")
+            select#cameras
+            div#buttons
+                button#mute Mute
+                button#camera Turn Camera off
         script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
