--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -11,10 +11,19 @@ html(lang="en")
         header
             h1 Zoom
         main 
-            video#myFace(autoplay, playsinline, width="400", height="280")
-            select#cameras
-            div#buttons
-                button#mute Mute
-                button#camera Turn Camera off
+            div#welcome
+                form
+                    input(placeholder="room name", required, type="text")
+                    button Enter room
+
+            div#call
+                div#myStream
+                    video#myFace(autoplay, playsinline, width="400", height="280")
+                    video#peerFace(autoplay, playsinline, width="400", height="280")
+                    select#cameras 
+                        option Camera Select
+                    div#buttons
+                        button#mute Mute
+                        button#camera Turn Camera off
         script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
